--- a/public/index.html
+++ b/public/index.html
@@ -2,98 +2,102 @@
 <html>
 <head>
 	<title>Timothy Fung Portfolio</title>
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/css/materialize.min.css">
-	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<meta charset="UTF-8">
+  <meta name="viewport" content="initial-scale=1.0, width=device-width" />
+  <meta http-equiv="X-UA-Compatible" content="IE=9; IE=8; chrome=1" >
+  <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/css/materialize.min.css">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-
+<div class='navbar-fixed'>
+<ul id="dropdown1" class="dropdown-content">
+  <li><a href="http://sortvisualizer.yougottimfung.com/" target="blank">Algorithm Visualizer</a></li>
+  <li><a href="https://github.com/TimFung93/movie-database" target="blank">Movie Database</a></li>
+  <li class="divider"></li>
+  <li><a href="https://github.com/TimFung93/Javascript-BlackJack" target='blank'>BlackJack</a></li>
+</ul>
 <nav>
 
-<div class="nav-wrapper">
-	<ul id='nav-mobile' class='right'>
-		<li><a href="#">About</a></li>
-		<li><a href="#">Projects</a></li>
-		<li><a href="#">Contact</a></li>
-	</ul>
-
-
-
-<a href="#" data-activates='slide-out' class='button-collapse'><i class='material-icons'>Timothy</i></a> 
-
-</div>
-
+  <div class="nav-wrapper">
+    <ul class="right hide-on-med-and-down">
+      <li><a href="badges.html">Contact</a></li>
+      <!-- Dropdown Trigger -->
+      <li><a class="dropdown-button" href="#!" data-activates="dropdown1">Projects</a></li>
+    </ul>
+  </div>
 </nav>
-
-
-
-<main>
+</div>
+<main>  
 	
 <div class="container">
-
 	<div class='row home'>
 		<div class="col m8">
-			<h2 id='main'>I'm Timothy Fung, an aspiring Web Developer.</h2>
+      <h2>Hi,</h2>
+			<h2>I'm Timothy</h2>
+			<h2><span>Web developer.</span></h2>
 			<div><h4 id='output'></h4></div>
 		</div>
 	</div>
+
+
+<hr class="style-eight">
+
+
+
+	<div class='row about'>
+		<div class="col m12">
+			<h4 class='abouth'>About</h4>
+      <hr class="primary">
+			<p id='aboutp'>Hi, I’m an independent web developer from Toronto, Canada. I work primarily with <span>React.js</span> and <span>Node.js.</span> Have a look at some of <span>my projects</span>. Need help with an upcoming project or application? Learn a bit more about me and then consider <span>hiring me</span>.</p> 
+		</div>
+    </div>
+
+<div class='row'>
+  <div class='col m6'>coming from left</div>
+  <div class='col m6'>coming from right</div>
 </div>
 
-
-<div class="banner"></div>
+  
 
 <div class="container">
-	<div class='row about'>
-		<div class="col m6">
-			<h4>About me</h4>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p> 
-		</div>
-
-		<div class='col m6'>
-			<h4>Languages</h4>
-			<p>HTML5, CSS3, SASS, JQUERY, JAVSCRIPT, PYTHON, REACT, NODEJS, GIT, MONGODB</p>
-		</div>
-	</div>
+  <div class='row about'>
+    <div class="col m12">
+      <h4 class='abouth'>Skills</h4>
+      <hr class="primary">
+        <div class='skillsdiv'>
+          <ul class='skills'>
+            <li>HTML5/CSS3</li>
+            <li>JQuery</li>
+            <li>JavaScript</li>
+            <li>MongoDB</li>
+            <li>Expressjs</li>
+            <li>Reactjs</li>
+            <li>Nodejs</li>
+            <li>PostgreSQL</li>
+            <li>Python</li>
+        </ul>
+        </div>
+    </div>
+    </div>
 </div>
-<div class="banner"></div>
-	<div class="container">
-		<div class='row project'>
-			<div class="col m6">Blackjack for projects</div>
-			<div class="col m6"><img src="css/img/BlackJack.jpg"></div>
-		</div>
 
-		<div class='row project'>
-			<div class="col m6"><img src="css/img/imdb-logo.jpg"></div>
-			<div class="col m6">Movie Database for project </div>
-		</div>
-	</div>
 
-<div class="banner"></div>
+
+<hr class="style-eight">
+
+
 <section id="contact">
         <div class="container">
             <div class="row">
-                <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">Let's Get In Touch!</h2>
-                    <hr class="primary">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                    tempor incididunt ut labore et dolore magna aliqua.</p>
-                     <p>Spiel Inc. <br>1000 Bay Street.
-                     Toronto, CA.
-                     (416) 123-4567
-                     </p>
-                     <a href="https://github.com/"><img src="css/img/github-black-32.png" alt="github logo"></a>
-                     <a href="https://accounts.google.com/ServiceLogin?service=mail&passive=true&rm=false&continue=https://mail.google.com/mail/&ss=1&scc=1&ltmpl=default&ltmplcache=2&emr=1&osid=1#identifier"><img src="css/img/email-black-32.png" alt="email logo"></a>
-                    <a href="https://www.facebook.com/"><img src="css/img/facebook-black-32.png" alt="facebook logo"></a>
-                
+                <div class="col-lg-8 col-lg-offset-2 center-align">
+                  <h2 class="section-heading">Let's Get In Touch!</h2>
+                  <hr class="primary">
+                  <p>You can find me on my Linkedin, Facebook, Github Email.</p>
+                   <a href="https://github.com/" target='blank'><img src="css/img/github-sign.svg" alt="github logo"></a>
+                   <a href="https://accounts.google.com/ServiceLogin?service=mail&passive=true&rm=false&continue=https://mail.google.com/mail/&ss=1&scc=1&ltmpl=default&ltmplcache=2&emr=1&osid=1#identifier" target="blank"><img src="css/img/close-envelope.svg" alt="email logo"></a>
+                  <a href="https://www.facebook.com/" target="blank"><img src="css/img/facebook-logo.svg" alt="facebook logo"></a>
+                  <a href="https://www.linkedin.com/feed/" target="blank"><img src="css/img/linkedin-logo-button.svg" alt="Linkedin logo"></a>
                 </div>
                 <div class="col-lg-4 col-lg-offset-2 text-center">
                    
@@ -107,6 +111,7 @@
     </section>
 
 
+</div>
 
 
 
@@ -115,10 +120,7 @@
 
 
 
-<script
-  src="https://code.jquery.com/jquery-3.1.1.js"
-  integrity="sha256-16cdPddA6VdVInumRGo6IbivbERE8p7CQR3HzTBuELA="
-  crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.1.1.js" integrity="sha256-16cdPddA6VdVInumRGo6IbivbERE8p7CQR3HzTBuELA=" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/js/materialize.min.js"></script>
 <script type="text/javascript" src='js/app.js'></script>
 
