--- a/public/index.html
+++ b/public/index.html
@@ -16,12 +16,13 @@
   <li><a href="https://github.com/TimFung93/movie-database" target="blank">Movie Database</a></li>
   <li class="divider"></li>
   <li><a href="https://github.com/TimFung93/Javascript-BlackJack" target='blank'>BlackJack</a></li>
+  <li><a href="https://github.com/TimFung93/Project-Hack" target='blank'>Project Fran</a></li>
 </ul>
 <nav>
 
   <div class="nav-wrapper">
     <ul class="right hide-on-med-and-down">
-      <li><a href="badges.html">Contact</a></li>
+      <li><a href="#contact">Contact</a></li>
       <!-- Dropdown Trigger -->
       <li><a class="dropdown-button" href="#!" data-activates="dropdown1">Projects</a></li>
     </ul>
@@ -49,13 +50,18 @@
 		<div class="col m12">
 			<h4 class='abouth'>About</h4>
       <hr class="primary">
-			<p id='aboutp'>Hi, I’m an independent web developer from Toronto, Canada. I work primarily with <span>React.js</span> and <span>Node.js.</span> Have a look at some of <span>my projects</span>. Need help with an upcoming project or application? Learn a bit more about me and then consider <span>hiring me</span>.</p> 
+			   <p id='aboutp'>Hi, I’m an independent web developer from Toronto, Canada. I work primarily with <a href="https://facebook.github.io/react/" target='blank'><span>React.js</span></a> and <a href="https://nodejs.org/en/" target='blank'><span>Node.js.</span></a> Have a look at some of <a href="https://github.com/TimFung93" target='blank'><span>my projects</span></a>. Need help with an upcoming project or application? Learn a bit more about me and then consider <a href="https://www.linkedin.com/in/timothy-fung-0923ba74/" target='blank'><span>hiring me</span></a>.</p> 
 		</div>
     </div>
 
 <div class='row'>
-  <div class='col m6'>coming from left</div>
-  <div class='col m6'>coming from right</div>
+  <div class='col m6'><img id='latest' src='css/img/sort.png'></div>
+  
+  <div class='col m6'>
+    <h4 id='lateh'>Latest Project</h4>
+    <p>Algorithm is a flashy word. I found people get intimidated by it because when they hear the word algorithm, they think of a Google algorithm. With this project, I wanted to show algorithms are not that intimidating and when broken down to this smallest components, they are actually pretty easy to understand. Plus, they can be very cool to visualize. With this project I hope to educate people who want to understand algorithms a bit more but have a hard time visualizing what is specifically going on.</p>
+  </div>
+    </div>
 </div>
 
   
@@ -70,13 +76,13 @@
             <li>HTML5/CSS3</li>
             <li>JQuery</li>
             <li>JavaScript</li>
+            <li>PostgreSQL</li>
+            <li>Python</li>
             <li>MongoDB</li>
             <li>Expressjs</li>
             <li>Reactjs</li>
             <li>Nodejs</li>
-            <li>PostgreSQL</li>
-            <li>Python</li>
-        </ul>
+        </ul> 
         </div>
     </div>
     </div>
@@ -93,11 +99,11 @@
                 <div class="col-lg-8 col-lg-offset-2 center-align">
                   <h2 class="section-heading">Let's Get In Touch!</h2>
                   <hr class="primary">
-                  <p>You can find me on my Linkedin, Facebook, Github Email.</p>
-                   <a href="https://github.com/" target='blank'><img src="css/img/github-sign.svg" alt="github logo"></a>
+                  <p>You can find me on my Linkedin, Facebook, Github, Email.</p>
+                   <a href="https://github.com/TimFung93" target='blank'><img src="css/img/github-sign.svg" alt="github logo"></a>
                    <a href="https://accounts.google.com/ServiceLogin?service=mail&passive=true&rm=false&continue=https://mail.google.com/mail/&ss=1&scc=1&ltmpl=default&ltmplcache=2&emr=1&osid=1#identifier" target="blank"><img src="css/img/close-envelope.svg" alt="email logo"></a>
-                  <a href="https://www.facebook.com/" target="blank"><img src="css/img/facebook-logo.svg" alt="facebook logo"></a>
-                  <a href="https://www.linkedin.com/feed/" target="blank"><img src="css/img/linkedin-logo-button.svg" alt="Linkedin logo"></a>
+                  <a href="https://www.facebook.com/tim.fung.585" target="blank"><img src="css/img/facebook-logo.svg" alt="facebook logo"></a>
+                  <a href="https://www.linkedin.com/in/timothy-fung-0923ba74/" target="blank"><img src="css/img/linkedin-logo-button.svg" alt="Linkedin logo"></a>
                 </div>
                 <div class="col-lg-4 col-lg-offset-2 text-center">
                    
